# PSXFunkin

./: .gitattributes  .gitignore  CMakeLists.txt  COMPILE.md  FORMATS.md  Makefile  Makefile.assets  Makefile.chr  Makefile.cht  Makefile.mus  Makefile.overlay  Makefile.pc  Makefile.tim  Makefile.toh  Makefile.tools  Makefile.xa  Overlay.menu  Overlay.week1  README.md  funkin.xml  funkin_exp.xml  global.sstate  overlay.ld
iso/: system.cnf
iso/bf/: bf6.png.txt  dead.arc  dead0.tim  dead1.tim  dead2.tim  down.tim  hit0.tim  hit1.tim  idle.tim  left.tim  main.arc  main.chr.json  miss0.tim  miss1.tim  peace.tim  right.tim  up.tim  weeb.arc  weeb0.tim  weeb1.tim  xmasbf0.png.txt
iso/chart/: 1.1e.cht  1.1h.cht  1.1n.cht  1.2e.cht  1.2h.cht  1.2n.cht  1.3e.cht  1.3h.cht  1.3n.cht  1.4e.cht  1.4h.cht  1.4n.cht  2.1e.cht  2.1h.cht  2.1n.cht  2.2e.cht  2.2h.cht  2.2n.cht  2.3e.cht  2.3h.cht  2.3n.cht  3.1e.cht  3.1h.cht  3.1n.cht  3.2e.cht  3.2h.cht  3.2n.cht  3.3e.cht  3.3h.cht  3.3n.cht  4.1e.cht  4.1h.cht  4.1n.cht  4.2e.cht  4.2h.cht  4.2n.cht  4.3e.cht  4.3h.cht  4.3n.cht  4.4e.cht  (+53 more)
iso/dad/: down.tim  idle.tim  idle0.tim  idle1.tim  left.tim  main.arc  right.tim  up.tim
iso/font/: arial.png.txt  boldfont.png.txt  boldfont.tim
iso/gf/: bopleft.tim  bopright.tim  cry.tim  gf1.png.txt  main.arc  speaker.png.txt  speaker.tim  weeb0.png.txt  weeb1.png.txt
iso/menu/: back.png.txt  back.tim  gf0.tim  gf1.tim  gf2.tim  gf3.tim  gf4.tim  loading.png.txt  loading.tim  menu.arc  ng.png.txt  ng.tim  story.png.txt  story.tim  title.png.txt  title.tim  title0.tim  title1.tim  whitefnt.tim
iso/mom/: down.tim  hair.png.txt  hair.tim  idle0.tim  idle1.tim  left.tim  main.arc  right.tim  up.tim
iso/music/: clwna.xa.txt  clwnb.xa.txt  kapia.xa.txt  kapib.xa.txt  menu.xa.txt  week1a.xa.txt  week1b.xa.txt  week2a.xa.txt  week2b.xa.txt  week3a.xa.txt  week3b.xa.txt  week4a.xa.txt  week4b.xa.txt  week5a.xa.txt  week5b.xa.txt  week6a.xa.txt  week6b.xa.txt  week7a.xa.txt  week7b.xa.txt
iso/music/freakyMenu/: freakyMenu.txt
iso/music/hairball/: hairball.txt
iso/music/stress/: stress.txt
iso/pico/: hit0.tim  hit1.tim  idle.tim  main.arc
iso/senpai/: main.arc  senpai0.png.txt  senpai0.tim  senpai1.tim
iso/senpaimad/: main.arc
iso/spook/: down.tim  idle0.png.txt  idle0.tim  idle1.tim  idle2.tim  left.tim  main.arc  right.tim  up.tim
iso/stage/: health.tim  hud0.png.txt  hud0.tim  hud1.tim  note.tim  retry.tim
iso/tank/: down.tim  good.arc  good0.tim  good1.tim  good2.tim  good3.tim  idle0.tim  idle1.tim  left.tim  main.arc  right.tim  ugh.arc  ugh0.tim  ugh1.tim  up.tim
iso/week1/: back.arc  back0.tim  back1.tim  hud1.png.txt
iso/week2/: back.arc  back0.tim  back1.tim  back2.tim
iso/week3/: back.arc  back0.tim  back1.png.txt  back1.tim  back2.tim  back3.tim  back4.png.txt  back4.tim  back5.tim
iso/week4/: back.arc  back0.tim  back1.tim  back2.png.txt  back2.tim  back3.tim  hench.arc  hench0.png.txt  hench0.tim  hench1.tim
iso/week5/: back.arc  back0.tim  back1.tim  back2.tim  back3.png.txt  back3.tim  back4.tim
iso/week6/: back0.png.txt  back1.png.txt  back2.png.txt  back3.png.txt  hud0.png.txt  hud1.png.txt
iso/week7/: back.arc  back0.png.txt  back0.tim  back1.tim  back2.tim  back3.tim
iso/xmasp/: downa0.tim  downa1.tim  downb0.tim  downb1.tim  idle0.tim  idle1.tim  idle2.tim  idle3.tim  lefta0.tim  lefta1.tim  leftb0.tim  leftb1.tim  main.arc  righta0.tim  righta1.tim  rightb0.tim  rightb1.tim  upa0.tim  upa1.tim  upb0.tim  upb1.tim
mips/: common.mk  default.ld  ps-exe.ld
mips/common/crt0/: crt0.s
src/: animation.c  animation.h  archive.c  archive.h  audio.c  audio.h  audio_def.h  character.c  character.h  fixed.h  font.c  font.h  gfx.c  gfx.h  io.c  io.h  loadscr.c  loadscr.h  main.c  main.h  mem.c  mem.h  menu.c  menu.h  movie.c  movie.h  mutil.c  mutil.h  network.h  object.c  object.h  pad.c  pad.h  player.c  player.h  psx.h  random.c  random.h  sine.c  stage.c  (+7 more)
src/boot/: animation.c  animation.h  archive.c  archive.h  audio.h  audio_def.h  character.c  character.h  fixed.h  font.c  font.h  font_arialmap.h  gfx.h  io.h  loadscr.c  loadscr.h  main.c  main.h  mem.h  menu.c  movie.h  mutil.h  network.h  object.c  object.h  pad.h  player.h  random.c  save.h  stage.c  stage.h  stagedef_disc1.h  timer.h  trans.c
src/character/: bf.c  bf.h  bfweeb.c  bfweeb.h  clucky.c  clucky.h  dad.c  dad.h  gf.c  gf.h  gfweeb.c  gfweeb.h  mom.c  mom.h  pico.c  pico.h  senmad.c  senmad.h  senpai.c  senpai.h  senpaim.c  senpaim.h  senpaimad.c  senpaimad.h  speaker.c  speaker.h  spirit.c  spirit.h  spook.c  spook.h  tank.c  tank.h  xmasbf.c  xmasbf.h  xmasp.c  xmasp.h
src/menu/: menu.c  menu.h
src/object/: combo.c  combo.dep  combo.h  splash.c  splash.h
src/pc/: audio.c  gfx.c  gl.c  gl.h  glfw.c  io.c  miniaudio.c  movie.c  network.c  pad.c  psx.c  sdl.c  sdlaudio.c  sdlpad.c  timer.c
src/player/: bf.c  bf.h
src/psx/: audio.c  gfx.c  io.c  movie.c  pad.c  psx.c  strplay.c  timer.c
src/stage/: dummy.c  dummy.h  week1.c  week1.h  week2.c  week2.h  week3.c  week3.h  week4.c  week4.h  week5.c  week5.h  week6.c  week6.h  week7.c  week7.h
src/week1/: week1.c  week1.h
src/week2/: week2.c  week2.h
src/week3/: week3.c  week3.h
src/week4/: week4.c  week4.h
src/week6/: week6.c  week6.h
tools/bin2h/: Makefile  bin2h.c
tools/funkinarcpak/: Makefile  funkinarcpak.c
tools/funkinchartpak/: Makefile  exp.sh  funkinchartpak.cpp
tools/funkinchrpak/: Makefile  funkinchrpak.cpp
tools/funkinchtpak/: Makefile  funkinchtpak.cpp
tools/funkinexepak/: Makefile  funkinexepak.c
tools/funkinisopak/: Makefile  funkinisopak.cpp
tools/funkinmuspak/: Makefile  adpcm.cpp  adpcm.h  funkinmuspak.cpp
tools/funkinoverlaypak/: Makefile  funkinoverlaypak.c
tools/funkinpicopak/: Makefile  exp.sh  funkinpicopak.cpp
tools/funkintimconv/: Makefile  funkintimconv.c
tools/funkintimpak/: Makefile  funkintimpak.c
tools/psxavenc/: Makefile  README.md  cdrom.c  common.h  decoding.c  filefmt.c  mdec.c  psxavenc.c
tools/xainterleave/: LICENSE  Makefile  README.md  xainterleave.c
(+27 files in other folders)
